--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>HARSHA's personal website</title>
   <table cellspacing="10">
   <td>
-<img src="c:\Users\GFGC\Desktop\harsha pic.jpeg" width="100px" height="100px"  title="jsss" alt="img">
+<img src="images\harsha pic.jpeg" width="100px" height="100px"  title="jsss" alt="img">
 </td>
 <td>
   <h1>I'm Harsha</h1>
